Bug 87543. Don't try to do arithmetic when psd->mRightEdge == NS_UNCONSTRAINEDSIZE. r=rbs, sr=attinasi